--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,8 @@ header h2 {
     margin: 0;
 }
 
-.tab-content {
+/* .tab-content {
     border: 1px solid #DDD;
     border-top: none;
     padding: 10px;
-}
+} */
